Support PreDisplayServer phase

To run gnome-keyring before gnome-shell is set up, so that
gnome-shell can pick up it's own variables.

https://bugzilla.gnome.org/show_bug.cgi?id=756324